StarterSet/force-app/main/default/objects/ExceptionNotification__e/ExceptionNotification__e.object-meta.xml
<CustomObject>
    <description>Exception発生時にログを保存するための一時保存用プラットフォームイベント</description>
    <label>ExceptionNotification</label>
</CustomObject>