StarterSet/force-app/main/default/objects/ExceptionNotification__e/fields/ExecutionUserID__c.field-meta.xml
<CustomField>
    <fullName>ExecutionUserID__c</fullName>
    <label>Execution User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>